MAT-230 collection card white line on safari fix

--- a/src/components/CollectionsAndPalettes/common/ItemCard/ItemCard.module.scss
+++ b/src/components/CollectionsAndPalettes/common/ItemCard/ItemCard.module.scss
@@ -21,7 +21,7 @@
       min-height: 100% !important;
       height: unset !important;
       width: 100% !important;
-      margin: 0 !important;
+      margin: 0.5% !important;
       border-radius: 0 !important;
     }
   }
